edit in comment

--- a/Pandas_Series_1.ipynb
+++ b/Pandas_Series_1.ipynb
@@ -67,6 +67,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 241
         },
+        "collapsed": true,
         "id": "UfMxdQZbiFJI",
         "outputId": "619cd1af-7e90-47e9-f8af-2c2ef5ee505c"
       },
